config-sync/worker-cluster/ingress-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: asm-showcase
  name: asm-ingressgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asm-ingressgateway
      istio: ingressgateway
  template:
    metadata:
      annotations:
        # This is required to tell Anthos Service Mesh to inject the gateway with the
        # required configuration.
        inject.istio.io/templates: gateway
      labels:
        app: asm-ingressgateway
        istio: ingressgateway
    spec:
      containers:
      - name: istio-proxy
        image: auto # The image will automatically update each time the pod starts.
        resources:
          limits:
            cpu: 2000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi
      serviceAccountName: asm-ingressgateway
---
apiVersion: v1
kind: Service
metadata:
  namespace: asm-showcase
  name: asm-ingressgateway
  labels:
    app: asm-ingressgateway
    istio: ingressgateway
spec:
  ports:
  # The status-port exposes a /healthz/ready endpoint that can be used for health checks.
  - name: status-port
    port: 15021
  - name: https
    port: 443    
    targetPort: 8443
  selector:
    app: asm-ingressgateway
    istio: ingressgateway
  type: ClusterIP
