config-sync/worker-cluster/monitoring-prom-frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prom-frontend
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prom-frontend
  template:
    metadata:
      labels:
        app: prom-frontend
    spec:
      automountServiceAccountToken: true
      serviceAccountName: prom-frontend
      containers:
        - name: prom-frontend
          image: gke.gcr.io/prometheus-engine/frontend:v0.7.0-gke.0
          args:
            - "--web.listen-address=:9090"
            - "--query.project-id=asm-showcase-6312a455"
          ports:
            - name: web
              containerPort: 9090
          readinessProbe:
            httpGet:
              path: /-/ready
              port: web
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            privileged: false
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: web
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: prom-frontend
  namespace: monitoring
spec:
  clusterIP: None
  selector:
    app: prom-frontend
  ports:
    - name: web
      port: 9090
