config-sync/worker-cluster/asm-usecase-ns-gw.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Namespace
metadata:
  name: asm-usecase
  labels:
    istio.io/rev: asm-managed
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
  namespace: asm-usecase
spec:
  selector:
    app: asm-l4gateway
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: asm-usecase
  name: asm-l4gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asm-l4gateway
      istio: ingressgateway
  template:
    metadata:
      annotations:
        # This is required to tell Anthos Service Mesh to inject the gateway with the
        # required configuration.
        inject.istio.io/templates: gateway
      labels:
        app: asm-l4gateway
        istio: ingressgateway
    spec:
      containers:
      - name: istio-proxy
        image: auto # The image will automatically update each time the pod starts.
        resources:
          limits:
            cpu: 2000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi
      serviceAccountName: asm-l4gateway
---
apiVersion: v1
kind: Service
metadata:
  namespace: asm-usecase
  name: asm-l4gateway
  labels:
    app: asm-l4gateway
    istio: ingressgateway
spec:
  ports:
  # The status-port exposes a /healthz/ready endpoint that can be used for health checks.
  - name: status-port
    port: 15021
  - name: http
    port: 80    
  selector:
    app: asm-l4gateway
    istio: ingressgateway
  type: ClusterIP
